--- a/templates/collection.endless-click.liquid
+++ b/templates/collection.endless-click.liquid
@@ -58,7 +58,7 @@
     {% endfor %}
     {% if paginate.next %}
       <div class="row LoadMore">
-        <a class="button center" role="button" href="{{ paginate.next.url }}">{{ 'collection.endless.loading' | t }}</a>
+        <a class="button center" role="button" href="{{ paginate.next.url }}">{{ 'common.pagination.loadmore' | t }}</a>
   	  </div>
     {% endif %}
   </div>
