--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -113,7 +113,7 @@
   To take advantage of a callback on the select dropdown, add option_selection.js
   and customize the JS in concrete.productPage as needed.
 
-  Currently, timber.productPage does the following:
+  Currently, the Concrete Product Page does the following:
     - Hides your <select> tag from above
     - Breaks out the product variants into separate product options, if more than one exists
     - Generates a <select> tag for each product option
