--- a/snippets/collection-product.liquid
+++ b/snippets/collection-product.liquid
@@ -16,7 +16,7 @@
 
 <div class="{{ column_width }}">
 
-  <a href="{{ product.url | within: collection }}" class="grid-image">
+  <a href="{{ product.url | within: collection }}">
     <img src="{{ product.featured_image.src | img_url: 'large' }}" alt="{{ product.featured_image.alt | escape }}">
   </a>
 
