Cleaning up & Notes

--- a/snippets/onboarding-empty-collection.liquid
+++ b/snippets/onboarding-empty-collection.liquid
@@ -1,4 +1,9 @@
 <!-- snippets/onboarding-empty-collection.liquid -->
+
+{% comment %}
+  This is probably a legacy thing
+{% endcomment %}
+
 <div class="grid__item">
   <div class="helper-section">
     <div class="helper-note">
