--- a/snippets/onboarding-featured-collections.liquid
+++ b/snippets/onboarding-featured-collections.liquid
@@ -1,5 +1,9 @@
 <!-- snippets/onboarding-featured-collections.liquid -->
 
+{% comment %}
+  This is probably a legacy thing
+{% endcomment %}
+
 <div class="helper-section">
   <div class="helper-note">
     <span class="helper-icon"></span>
