--- a/snippets/onboarding-featured-products.liquid
+++ b/snippets/onboarding-featured-products.liquid
@@ -1,5 +1,9 @@
 <!-- snippets/onboarding.products-featured-products.liquid -->
 
+{% comment %}
+  This is probably a legacy thing
+{% endcomment %}
+
 <div class="column l12 helper-section">
   <div class="helper-note">
     <span class="helper-icon"></span>
