--- a/assets/app.js.liquid
+++ b/assets/app.js.liquid
@@ -364,8 +364,8 @@ $.ajaxinationClick = function() {
     pageNumber = $(this).attr('data-number');
     pageType = 'ajax';
    $('html, body').animate({
-      scrollTop: $(contentContainer).offset().top
-    }, 2000);
+      scrollTop: $(parentContainer).offset().top
+    }, 500 );
     if( $(ajaxinateClass+'[data-page="'+pageNumber+'"]').length ) {
       $(ajaxinateClass).not('[data-page="'+pageNumber+'"]').fadeOut(fade);
       $(ajaxinateClass+'[data-page="'+pageNumber+'"]').fadeIn(fade);
