Tweaks and temp dist

--- a/assets/app.scss.liquid
+++ b/assets/app.scss.liquid
@@ -272,7 +272,7 @@ p {
   font-size: 1.125rem;
   font-weight: $fontRegular;
   line-height: $lineHeight;
-  margin-bottom: 1.4em;
+  margin-bottom: 1.4rem;
 }
 
 a {
@@ -290,12 +290,16 @@ hr {
   margin: $gutter/1.5 0;
 }
 
-strong {
+strong, b {
   font-weight: $fontBold;
 }
 
 small {
   font-size: 0.8rem;
+}
+
+i {
+  font-style: italic;
 }
 
 .rte {
