Fix for potential html height issue

--- a/assets/app.scss.liquid
+++ b/assets/app.scss.liquid
@@ -240,7 +240,12 @@ form, input, textarea, label, fieldset, legend, select, optgroup, option, button
 
 /* Global ====================================================================*/
 
+html {
+  height: 100%
+}
+
 body {
+  height: 100%;
   color: $colorBody;
   background-color: $colorBackground;
   font: 16px/21px sans-serif;
