--- a/snippets/blog-author.liquid
+++ b/snippets/blog-author.liquid
@@ -4,7 +4,7 @@
   <hr>
   <div class="row">
     <div class="column l3 m3 s-hide">
-      <img src="https://www.gravatar.com/avatar/{{ article.user.email | remove: ' ' | strip_newlines | downcase | md5 }}?s=400&amp;d=mm" />
+      <img src="//www.gravatar.com/avatar/{{ article.user.email | remove: ' ' | strip_newlines | downcase | md5 }}?s=400&d=mm" />
     </div>
     <div class="column l9 m9 s12">
       <h4>{{ 'blog.author.about_with_name' | t: first_name: article.user.first_name  }}</h4>
