--- a/snippets/theme-header.liquid
+++ b/snippets/theme-header.liquid
@@ -28,7 +28,11 @@
       <div class="column l4 m4 s12 l-right m-right s-middle">
 
         {% if shop.customer_accounts_enabled %}
-          <a href="/account" data-popup="#PopupAccount" class="popup-link">{{ 'account.title' | t }}</a>
+          {% if customer %}
+            <a href="/account">{{ 'account.title' | t }}</a>
+          {% else %}
+            <a href="/account" data-popup="#PopupAccount" class="popup-link">{{ 'account.title' | t }}</a>
+          {% endif %}
         {% endif %}
 
         <a href="/cart" id="CartLink" data-popup="#PopupCart" class="popup-link" aria-controls="Cart" aria-expanded="false" rv-cloak data-cart-view>
