Minor css tweak

--- a/assets/app.scss.liquid
+++ b/assets/app.scss.liquid
@@ -777,7 +777,8 @@ form#AddToCartForm, form#CartPage, form#contact_form {
 body {
   @include transition();
   &.loading {
-    // Do something while the Ajax loads
+    // Do something while the Ajax elements load
+    opacity: 0;
   }
 }
 
