Minor CSS improvements

--- a/assets/app.scss.liquid
+++ b/assets/app.scss.liquid
@@ -396,7 +396,7 @@ select {
     cursor: default;
     background-color: lighten($colorAlternate, 30%);
     border-color: lighten($colorAlternate, 30%);
-    color: $colorBackground;
+    color: lighten($colorAlternate, 45%);
     &:hover {
       @extend .disabled
     }
