Added Instafeed section and fix for margin collapsing

--- a/assets/app.scss.liquid
+++ b/assets/app.scss.liquid
@@ -473,6 +473,11 @@ a.button {
 
 /* Grid System ===============================================================*/
 
+.container, .row, .column {
+  // Margin collapse fix
+  overflow: auto;
+ }
+
 .container {
   max-width: 100%;
   width: $l;
