--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -74,6 +74,7 @@
   {% include 'popup-login' %}
 
   {% comment %}{{ 'cookies.min.js' | asset_url | script_tag }}{% endcomment %}
+  {{ 'slick.min.js', | asset_url | script_tag }}
   {{ 'rivets.min.js' | asset_url | script_tag }}
   {{ 'cart.js' | asset_url | script_tag }}
   {{ 'app.js' | asset_url | script_tag }}
