--- a/templates/password.liquid
+++ b/templates/password.liquid
@@ -9,7 +9,7 @@
   <label for="password">Enter store using password:</label>
   <input type="password" name="password">
   <input type="submit" value="Enter">
-{% endform %
+{% endform %}
 
 {% form 'customer' %}
   {{ form.errors | default_errors }}
