--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -85,7 +85,8 @@
       </div>
 
       {% include 'social-sharing' %}
-
+      
+      {% include 'drop-a-hint' %}
       {% if collection %}
         {% if collection.previous_product or collection.next_product %}
           <p>
