I hope I haven't broken everything

--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -37,7 +37,7 @@
         <meta itemprop="priceCurrency" content="{{ shop.currency }}">
         <link itemprop="availability" href="http://schema.org/{% if product.available %}InStock{% else %}OutOfStock{% endif %}">
 
-        <form action="/cart/add" method="post" enctype="multipart/form-data" id="AddToCartForm">
+        <form action="/cart/add" method="post" enctype="multipart/form-data" id="AddToCartForm" data-cart-submit>
 
           <select name="id" id="productSelect" class="product-single__variants">
             {% for variant in product.variants %}
@@ -72,8 +72,9 @@
 
           <label for="Quantity" class="clearfix">{{ 'product.quantity' | t }}</label>
           <input type="number" id="Quantity" name="quantity" value="1" min="1" data-cart-quantity="1">
-
-          <button type="submit" name="add" id="AddToCart" data-cart-add="{{ product.variant.id }}">
+          <label for="Item">Item
+          <input type="text" id="Item" name="properties[ItemName]">
+          <button type="submit" name="add" id="AddToCart">
             <span id="AddToCartText">{{ 'product.add_to_cart' | t }}</span>
           </button>
         </form>
