Add line item properties to cart from CartJS.Data.add()

--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -74,7 +74,7 @@
           <input type="number" id="Quantity" name="quantity" value="1" min="1" data-cart-quantity="1">
           <label for="Item">Item
           <input type="text" id="Item" name="properties[ItemName]">
-          <button type="submit" name="add" id="AddToCart">
+          <button type="submit" name="add" id="AddToCart" data-cart-add="{{ product.id }}">
             <span id="AddToCartText">{{ 'product.add_to_cart' | t }}</span>
           </button>
         </form>
