Updated CTA Bar, added global icons

--- a/assets/app.scss.liquid
+++ b/assets/app.scss.liquid
@@ -704,6 +704,15 @@ a.button {
   padding: $gutter/2 0;
 }
 
+/* Icons ====================================================================*/
+
+.icon {
+  svg polyline, svg polygon, svg path, svg circle, svg line{
+    fill: none;
+    stroke: {{ settings.color_body }}
+  }
+}
+
 /* Forms =====================================================================*/
 
 form#AddToCartForm,
