--- a/snippets/theme-header.liquid
+++ b/snippets/theme-header.liquid
@@ -1,5 +1,7 @@
 <!-- /snippets/theme-header.liquid -->
 
+{% section 'cta-bar' %}
+
 <header class="theme-header" role="banner">
   <div class="container full">
 
