--- a/snippets/icon.liquid
+++ b/snippets/icon.liquid
@@ -1,3 +1,7 @@
+<!-- snippets/icon.liquid -->
+
+{% assign icon_size = settings.icon_size %}
+
 <span class="icon" aria-hidden="true">
   {% case icon %}
   {% when 'shopify' %}
@@ -7,10 +11,66 @@
       <path d="M13.3 3.1C13.3 3 13.2 3 13.1 3c-0.1 0-1.3-0.1-1.3-0.1S11 2 10.9 1.9c-0.1-0.1-0.3-0.1-0.3 0 0 0-0.2 0.1-0.5 0.1C9.8 1.2 9.5 0.5 8.3 0.5 8.1 0.1 7.8 0 7.5 0c-2.1 0-3 2.6-3.4 3.9C3.3 4.1 2.8 4.3 2.7 4.3 2.3 4.5 2.2 4.5 2.2 4.9c0 0.3-1.2 9.4-1.2 9.4l9.1 1.7 4.9-1.1C15 14.9 13.3 3.2 13.3 3.1zM8.3 2.6c-0.5 0.2-1 0.3-1.6 0.5 0.3-1.2 0.9-1.8 1.4-2C8.3 2 8.3 2.6 8.3 2.6zM7.4 0.6c0.1 0 0.2 0 0.3 0.1C7.1 1 6.3 1.7 6 3.3 5.6 3.4 5.2 3.6 4.8 3.7 5.1 2.5 6 0.6 7.4 0.6zM7.8 7.5c0 0-0.5-0.3-1.2-0.3 -1 0-1 0.6-1 0.8 0 0.8 2.2 1.1 2.2 3.1 0 1.5-1 2.5-2.3 2.5 -1.6 0-2.4-1-2.4-1l0.4-1.4c0 0 0.8 0.7 1.5 0.7 0.5 0 0.6-0.4 0.6-0.6 0-1.1-1.8-1.1-1.8-2.9 0-1.5 1.1-2.9 3.2-2.9 0.8 0 1.2 0.2 1.2 0.2L7.8 7.5zM8.8 2.4c0-0.1 0-0.1 0-0.2 0-0.5-0.1-0.9-0.2-1.2 0.5 0.1 0.8 0.6 1 1.2C9.4 2.3 9.1 2.4 8.8 2.4z" class="fill"/>
     </svg>
   {% when 'menu' %}
-    <!-- SVG CODE GOES HERE -->
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="{{ icon_size }}px" height="{{ icon_size }}px" viewBox="0 0 24 24"><g  transform="translate(0, 0)">
+    <line data-color="color-2" stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" x1="1" y1="12" x2="23" y2="12" stroke-linejoin="miter"/>
+    <line stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" x1="1" y1="5" x2="23" y2="5" stroke-linejoin="miter"/>
+    <line stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" x1="1" y1="19" x2="23" y2="19" stroke-linejoin="miter"/></g></svg>
   {% when 'cart' %}
-    <!-- SVG CODE GOES HERE -->
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="{{ icon_size }}px" height="{{ icon_size }}px" viewBox="0 0 24 24"><g  transform="translate(0, 0)">
+    <circle data-color="color-2" stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" cx="7" cy="21" r="2" stroke-linejoin="miter"/>
+    <circle data-color="color-2" stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" cx="19" cy="21" r="2" stroke-linejoin="miter"/>
+    <polyline data-cap="butt" stroke-width="2" stroke-miterlimit="10" points="4.667,6 22,6 20,16 6,16
+    4,1 1,1 " stroke-linejoin="miter" stroke-linecap="butt"/></g></svg>
+  {% when 'bag' %}
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="{{ icon_size }}px" height="{{ icon_size }}px" viewBox="0 0 24 24"><g  transform="translate(0, 0)">
+    <polygon stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" points="21,23 21,23 3,23
+    3,6 21,6 " stroke-linejoin="miter"/>
+    <path data-color="color-2" stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" d="M8,9V5
+    c0-2.2,1.8-4,4-4h0c2.2,0,4,1.8,4,4v4" stroke-linejoin="miter"/></g></svg>
+  {% when 'check' %}
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="{{ icon_size }}px" height="{{ icon_size }}px" viewBox="0 0 24 24"><g  transform="translate(0, 0)">
+    <polyline stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" points="2,12 9,19 22,6
+    " stroke-linejoin="miter"/>
+    </g></svg>
+  {% when 'shipping' %}
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="{{ icon_size }}px" height="{{ icon_size }}px" viewBox="0 0 24 24"><g  transform="translate(0, 0)">
+    <polyline stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" points="6,7 6,2 10,2
+    10,7 " stroke-linejoin="miter"/>
+    <polyline data-cap="butt" stroke-width="2" stroke-miterlimit="10" points="4,11 4,7 16,7 18,11 " stroke-linejoin="miter" stroke-linecap="butt"/>
+    <polyline stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" points="4,17 2,11 22,11
+    19,17 " stroke-linejoin="miter"/>
+    <path data-color="color-2" stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" d="M1,18
+    c0,2.2,1.8,4,4,4c1.5,0,2.8-0.9,3.5-2.1c0.7,1.2,2,2.1,3.5,2.1s2.8-0.9,3.5-2.1c0.7,1.2,2,2.1,3.5,2.1c2.2,0,4-1.8,4-4" stroke-linejoin="miter"/>
+    </g></svg>
+  {% when 'heart' %}
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="{{ icon_size }}px" height="{{ icon_size }}px" viewBox="0 0 24 24"><g  transform="translate(0, 0)">
+    <path stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" d="M21.243,3.757
+    c-2.343-2.343-6.142-2.343-8.485,0c-0.289,0.289-0.54,0.6-0.757,0.927c-0.217-0.327-0.469-0.639-0.757-0.927
+    c-2.343-2.343-6.142-2.343-8.485,0c-2.343,2.343-2.343,6.142,0,8.485L12,21.485l9.243-9.243C23.586,9.899,23.586,6.1,21.243,3.757z" stroke-linejoin="miter"/>
+    </g></svg>
+  {% when 'star' %}
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="{{ icon_size }}px" height="{{ icon_size }}px" viewBox="0 0 24 24"><g  transform="translate(0, 0)">
+    <polygon stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" points="12,2.6 15,9
+    21.4,9 16.7,13.9 18.6,21.4 12,17.6 5.4,21.4 7.3,13.9 2.6,9 9,9 " stroke-linejoin="miter"/>
+    </g></svg>
+  {% when 'loudspeaker' %}
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="{{ icon_size }}px" height="{{ icon_size }}px" viewBox="0 0 24 24"><g  transform="translate(0, 0)">
+    <polyline data-cap="butt" stroke-width="2" stroke-miterlimit="10" points="9,18 9,21 3,20 3,15.8 " stroke-linejoin="miter" stroke-linecap="butt"/>
+    <line data-cap="butt" stroke-width="2" stroke-miterlimit="10" x1="5" y1="7.5" x2="5" y2="16.5" stroke-linejoin="miter" stroke-linecap="butt"/>
+    <polygon stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" points="17,21 1,15 1,9
+    17,3 " stroke-linejoin="miter"/>
+    <line data-color="color-2" stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" x1="21" y1="12" x2="23" y2="12" stroke-linejoin="miter"/>
+    <line data-color="color-2" stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" x1="19.8" y1="7.5" x2="21.5" y2="6.5" stroke-linejoin="miter"/>
+    <line data-color="color-2" stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" x1="19.8" y1="16.5" x2="21.5" y2="17.5" stroke-linejoin="miter"/>
+    </g></svg>
+  {% when 'tree' %}
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="{{ icon_size }}px" height="{{ icon_size }}px" viewBox="0 0 24 24"><g  transform="translate(0, 0)">
+    <line data-cap="butt" data-color="color-2" stroke-width="2" stroke-miterlimit="10" x1="12" y1="19" x2="12" y2="23" stroke-linejoin="miter" stroke-linecap="butt"/>
+    <line data-cap="butt" data-color="color-2" stroke-width="2" stroke-miterlimit="10" x1="7" y1="23" x2="17" y2="23" stroke-linejoin="miter" stroke-linecap="butt"/>
+    <polygon stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" points="21,19
+    15.750061,12 19,12 12,2 5,12 8.25,12 3,19 " stroke-linejoin="miter"/>
+    </g></svg>
   {% else %}
-    <!-- No icon found -->
+    <!-- "{{ icon }}" icon not found -->
   {% endcase %}
 </span>
