--- a/snippets/theme-footer.liquid
+++ b/snippets/theme-footer.liquid
@@ -11,7 +11,7 @@
         {% endif %}
       </div>
       <div class="column l7 m12 s12 l-right m-middle">
-        {% if settings.enable_footer_social %}
+        {% if settings.enable_footer_subscribe %}
           {% include 'subscribe-form' %}
         {% endif %}
       </div>
